cambiando-en-master(por error

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -53,7 +53,7 @@
         <li>
           <details open>
             <summary class="summary-left">
-              <div>INICIANDO</div>
+              <div><a href="../index.html">INICIANDO</a></div>
               <div></div>
             </summary>
               <ul class="ul-aside-left">
@@ -65,9 +65,9 @@
 
         </li>
         <li>
-          <details>
-            <summary>
-              SELECTORES
+          <details open>
+            <summary class="summary-left">
+              <a href="../pages/selectors.html">SELECTORES</a>
             </summary>
               <ul>
                 <li>1</li>
