--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <p class="parrafo">En el proyecto donde tengas tu codigo html, por lo general creas una carpeta nueva de nombre styles, dentro de esta carpeta crear un archivo de extension css.</p>
           <div class="image-initial">
 
-            <img  src="assets/agregar_archivo_css.jpg" height="380px">
+            <img  src="assets/agregar_archivo_css.jpg"  height="380px">
           </div>
 
           <p class="parrafo">Para agregar CSS a un proyecto web, puedes seguir estos pasos generales:</p>
@@ -172,7 +172,7 @@
           <p class="parrafo">Las reglas CSS se utilizan para aplicar estilos a los elementos HTML en una página web. Cada regla CSS consta de dos partes principales: un selector y un bloque de declaración. Aquí tienes la estructura básica de una regla CSS:</p>
 
           <div class="image-initial">
-            <img  src="assets/estructura_css.JPG" height="300px">
+            <img  src="assets/estructura_css.JPG" height="300px" alt="Estructura css" title="Estructura css">
           </div>
             
 
