--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <li></li>
       </ul>
       
-      <div>
+      <!-- <div>
         <input type="button" value="dia">
-      </div>
+      </div> -->
 
 
   </header>
@@ -54,11 +54,11 @@
     <div class="container-aside-left">
       
       <ul class="ul-level-1">
-        <li>
+        <li class="li-left">
           <details open>
             <summary class="summary-left">
-              <div><a href="../index.html">INICIANDO</a></div>
-              <div></div>
+              <a href="../index.html">INICIANDO</a>
+              <!-- <div></div> -->
             </summary>
             <!--   <ul class="ul-aside-left">
                 <li class="li-left"><a href="#css" class="summary-class"> Que esCSS</a></li>
