cambiando color y fondos

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -117,7 +117,7 @@
       <div class="container-article-main">
 
         
-          <div class="article-main">
+          <div class="article-main" id="container-title-h1">
             <h1 class="title-course" >SELECTOR</h1>
           </div>
         
