--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -71,7 +71,7 @@
         <li>
           <details>
             <summary class="summary-left">
-              <div><a href="#">INICIANDO</a></div>
+              <div><a href="../pages/especificidad.html">ESPECIFICIDAD</a></div>
             </summary>
               
           </details>
