agregando-otros-selectores

--- a/pages/especificidad.html
+++ b/pages/especificidad.html
@@ -52,7 +52,7 @@
           <details open>
             <summary class="summary-left">
               <div><a href="../index.html">INICIANDO</a></div>
-              <div></div>
+              
             </summary>
           </details>
 
@@ -249,6 +249,14 @@
   
 
 </div>
+
+<div id="modal" class="modal">
+  <button class="button-close-modal" id="close-modal">Cerrar X</button>
+  <div class="into-modal">
+   <img src="" height="500px" id="image-modal">
+ </div>
+</div>
+   
 
     <script src="/js/prism_js/prism.js"></script>
     <script src="../js/scriptjsindex.js"></script>
